updated js links and created basic boxes

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -3,10 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script src="script.js" defer></script>
+    <title>Best Studio Ghibli Girls</title>
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
+    <!-- Styling -->
+    <link rel="stylesheet" href="styles.css" />
+    <!-- Javascript-->
+    <script src="main.js" defer></script>
+    <script src="server.js" defer></script>
   </head>
-  <body></body>
+  <header>
+    <h3>The best Studio Ghibli girls</h3>
+  </header>
+  <body>
+    <div class="box">This is a box!</div>
+    <div class="box">This is a box!</div>
+    <div class="box">This is a box!</div>
+    <div class="box">This is a box!</div>
+  </body>
+  <footer>
+    <h6>Created by: Lucia & Sigrid *dab*</h6>
+  </footer>
 </html>
