fixed a mistake in the body

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,16 +11,31 @@
     <script src="main.js" defer></script>
     <script src="server.js" defer></script>
   </head>
-  <header>
-    <h3>The best Studio Ghibli girls</h3>
-  </header>
   <body>
-    <div class="box">This is a box!</div>
-    <div class="box">This is a box!</div>
-    <div class="box">This is a box!</div>
-    <div class="box">This is a box!</div>
+    <header>
+      <h3>The best Studio Ghibli girls</h3>
+    </header>
+
+    <main>
+      <div class="box">
+        <img src="" alt="" srcset="" />
+        <p class="text">This is a box!</p>
+      </div>
+      <div class="box">
+        <img src="" alt="" srcset="" />
+        <p class="text">This is a box!</p>
+      </div>
+      <div class="box">
+        <img src="" alt="" srcset="" />
+        <p class="text">This is a box!</p>
+      </div>
+      <div class="box">
+        <img src="" alt="" srcset="" />
+        <p class="text">This is a box!</p>
+      </div>
+    </main>
+    <footer>
+      <p>Created by: Lucia & Sigrid *dab*</p>
+    </footer>
   </body>
-  <footer>
-    <h6>Created by: Lucia & Sigrid *dab*</h6>
-  </footer>
 </html>
