added a section and connected api to js files

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -17,22 +17,24 @@
     </header>
 
     <main>
-      <div class="box">
-        <img src="" alt="" srcset="" />
-        <p class="text">This is a box!</p>
-      </div>
-      <div class="box">
-        <img src="" alt="" srcset="" />
-        <p class="text">This is a box!</p>
-      </div>
-      <div class="box">
-        <img src="" alt="" srcset="" />
-        <p class="text">This is a box!</p>
-      </div>
-      <div class="box">
-        <img src="" alt="" srcset="" />
-        <p class="text">This is a box!</p>
-      </div>
+      <section>
+        <div class="box">
+          <img src="" alt="" srcset="" />
+          <p class="text">This is a box!</p>
+        </div>
+        <div class="box">
+          <img src="" alt="" srcset="" />
+          <p class="text">This is a box!</p>
+        </div>
+        <div class="box">
+          <img src="" alt="" srcset="" />
+          <p class="text">This is a box!</p>
+        </div>
+        <div class="box">
+          <img src="" alt="" srcset="" />
+          <p class="text">This is a box!</p>
+        </div>
+      </section>
     </main>
     <footer>
       <p>Created by: Lucia & Sigrid *dab*</p>
