updated id and classes + change div to li

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -17,23 +17,25 @@
     </header>
 
     <main>
-      <section>
-        <div class="box">
-          <img src="" alt="" srcset="" />
-          <p class="text">This is a box!</p>
-        </div>
-        <div class="box">
-          <img src="" alt="" srcset="" />
-          <p class="text">This is a box!</p>
-        </div>
-        <div class="box">
-          <img src="" alt="" srcset="" />
-          <p class="text">This is a box!</p>
-        </div>
-        <div class="box">
-          <img src="" alt="" srcset="" />
-          <p class="text">This is a box!</p>
-        </div>
+      <section id="ghib-container">
+        <ul id="char-container">
+          <li class="box">
+            <img src="" alt="" srcset="" />
+            <p class="text">This is a box!</p>
+          </li>
+          <li class="box">
+            <img src="" alt="" srcset="" />
+            <p class="text">This is a box!</p>
+          </li>
+          <li class="box">
+            <img src="" alt="" srcset="" />
+            <p class="text">This is a box!</p>
+          </li>
+          <li class="box">
+            <img src="" alt="" srcset="" />
+            <p class="text">This is a box!</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
