--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,8 +8,7 @@
     <!-- Styling -->
     <link rel="stylesheet" href="styles.css" />
     <!-- Javascript-->
-    <script src="main.js" defer></script>
-    <script src="server.js" defer></script>
+    <script type="module" src="main.js"></script>
   </head>
   <body>
     <header>
