changed pathways for models + added names for the characters

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
     <!-- Javascript-->
     <script type="module" src="main.js"></script>
+    <script type="module" src="server.js"></script>
   </head>
   <body>
     <header>
@@ -20,25 +21,33 @@
         <ul id="char-container">
           <li class="box">
             <img src="" alt="" srcset="" />
-            <p class="text">This is a box!</p>
+            <p class="text">Chihiro</p>
           </li>
           <li class="box">
             <img src="" alt="" srcset="" />
-            <p class="text">This is a box!</p>
+            <p class="text">San</p>
           </li>
           <li class="box">
             <img src="" alt="" srcset="" />
-            <p class="text">This is a box!</p>
+            <p class="text">Sophie</p>
           </li>
           <li class="box">
             <img src="" alt="" srcset="" />
-            <p class="text">This is a box!</p>
+            <p class="text">Sheeta</p>
+          </li>
+          <li class="box">
+            <img src="" alt="" srcset="" />
+            <p class="text">Nausicaä</p>
+          </li>
+          <li class="box">
+            <img src="" alt="" srcset="" />
+            <p class="text">Umi</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <p>Created by: Lucia & Sigrid *dab*</p>
+      <p>Created by: Lucia & Sigrid</p>
     </footer>
   </body>
 </html>
