added some comments

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,14 +9,13 @@
     <link rel="stylesheet" href="styles.css" />
     <!-- Javascript-->
     <script type="module" src="main.js"></script>
-    <script type="module" src="server.js"></script>
   </head>
   <body>
     <header>
       <h3>The best Studio Ghibli girls</h3>
     </header>
-
     <main>
+      <!-- Created boxes as a blueprint for the boxes from js -->
       <section id="ghib-container">
         <ul id="char-container">
           <li class="box">
